# grace-framework

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: grace.yml  grace_framework.yml  publish.yml  python-publish.yml
grace/: __init__.py  application.py  bot.py  cli.py  config.py  database.py  exceptions.py  generator.py  importer.py  model.py  watcher.py
grace/generators/: cog_generator.py  database_generator.py  migration_generator.py  model_generator.py  project_generator.py
grace/generators/templates/cog/: {{ cog_module_name }}_cog.py  {{ cog_name | to_snake }}_cog.py
grace/generators/templates/database/: cookiecutter.json
grace/generators/templates/database/{{ cookiecutter.__database_slug }}/: seed.py
grace/generators/templates/database/{{ cookiecutter.__database_slug }}/alembic/: env.py
grace/generators/templates/model/: {{ model_module_name }}.py  {{ model_name | to_snake }}.py
grace/generators/templates/project/: cookiecutter.json
grace/generators/templates/project/hooks/: post_gen_project.py
grace/generators/templates/project/{{ cookiecutter.__project_slug }}/: .env  .gitignore  README.md  alembic.ini  pyproject.toml
grace/generators/templates/project/{{ cookiecutter.__project_slug }}/bot/: __init__.py  {{ cookiecutter.__project_slug }}.py
grace/generators/templates/project/{{ cookiecutter.__project_slug }}/config/: application.py  config.cfg  database.cfg  environment.cfg  settings.cfg
grace/generators/templates/project/{{ cookiecutter.__project_slug }}/db/: seed.py
grace/generators/templates/project/{{ cookiecutter.__project_slug }}/db/alembic/: env.py
tests/: test_config.py  test_generator.py  test_model.py
tests/generators/: test_cog_generator.py  test_project_generator.py
