[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "grace-framework"
version = "0.10.10-alpha"
authors = [
	{ name="Simon Roy" }
]
maintainers = [
	{ name="Code Society Lab", email="admin@codesociety.xyz" }
]
description = "Extensible Discord bot framework based on Discord.py"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"

dependencies = [
	"discord>2.0",
	"logger",
	"coloredlogs",
	"python-dotenv",
	"configparser",
	"click",
	"sqlalchemy",
	"sqlalchemy-utils",
    "sqlmodel",
    "pydantic",
    "alembic",
	"cookiecutter",
	"jinja2-strcase",
	"inflect",
	"watchdog",
	"apscheduler"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "coverage",
    "black",
]

[project.urls]
"Homepage" = "https://codesociety.xyz"
"Source" = "https://github.com/Code-Society-Lab/grace-framework"

[project.scripts]
grace = "grace.cli:main"

[tool.setuptools]
packages = ["grace"]
license-files = []

[[tool.mypy.overrides]]
module = ["jinja2_pluralize.*", "cookiecutter.*"]
follow_untyped_imports = true

[tool.black]
exclude = '''
/(
    \.direnv
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | venv
  | \.svn
  | _build
  | buck-out
  | build
  | dist
  | __pypackages__
  | grace/generators/templates
)/
'''
